# ai-nexus

./: .cache-bust.txt  .gitattributes  .gitignore  CANARYFIX_DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  D0A_IMPL_DESIGN.md  D0B_IMPL_DESIGN.md  DEBUG_ANALYSIS.md  HANDOFF_REPORT.md  LICENSE  OPTIMIZATION_BLUEPRINT_V3.md  README.md  TODO.me  [...slug].astro  ai-nexus-context.txt  ai-nexus-status-report.json  all_caches.json  astro.config.mjs  audit-knowledge.js  audit_links.txt  audit_page.html  caches.json  check-specific-fni.js  cloudflare-api-tests.http  code-optimize.ps1  create_clean_script.ps1  current_version.txt  debug-fni-better.js  debug-fni.js  debug-mesh.js  debug-routing.js  debug_page.html  deepseek_entity.json  diagnose_fni.js  dry_run_registry.js  entities_head.json  et --soft 2f304a179ddac814ac702dbfa8a3d3a167d498ed  explicit.json  extract_hf_models.cjs  (+91 more)
.astro/: content-modules.mjs  content.d.ts  data-store.json  settings.json
.claude/: settings.local.json
.github/: lighthouse-budget.json
FAILED_RUN/: upsert.sql
FAILED_RUN_3/: merged.json
FINAL_PROOF/: raw.json  upsert.sql
antigravity_init/: INIT_README.md  instructions_for_agent.md  project_context.md  root_plan.md  system_prompt.md
astro/: config.mjs
config/: affiliate_rules.json
coverage/: coverage-final.json  frontend-data.js.html  index.html
data/: entities_test_B14.json  fni_updates.sql  manifest.json  merged.json  models_with_fni.json  raw_batch_000.json  raw_batch_001.json  raw_batch_002.json  raw_batch_003.json  raw_batch_004.json  raw_batch_005.json  raw_batch_006.json  raw_batch_007.json  raw_batch_008.json  raw_batch_009.json  raw_batch_010.json  raw_batch_011.json  raw_batch_012.json  raw_batch_013.json  raw_batch_014.json  raw_batch_015.json  raw_batch_016.json  raw_enriched.json  relations.json  relations_summary.json  spaces.json  test_batch.json
debug_logs/: upsert.sql
docs/: ALERT_SYSTEM.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CES_V5.1.2.md  CONSTITUTION_V4.3.2.md  CONSTITUTION_V5.1.1.md  CONSTITUTION_V5.1.2.md  CONSTITUTION_V5.1.3.md  ENV_CONFIGURATION.md  EXECUTION_PLAN_FORTRESS_V5.1.2.md  KV_CACHING_STRATEGY.md  PHASE6_EXECUTION_MEMO.md  PROJECT_HANDOVER.md  SYSTEM_PROMPT_V5.1.2.md  SYSTEM_PROMPT_V5.1.3.md  TEST_STRATEGY_MASTER_V6.0.md  v16.17-verification-report.md
evidence_logs/: merged.json  upsert.sql
final_evidence/: upsert.sql
functions/: [[path]].js  _middleware.js  _worker.js  test.js
hf-space/: .gitignore  DEPLOY.md  README.md  app.py  requirements.txt
migrations/: 0001_init.sql  0002_v3_schema.sql  0002_v48_tables.sql  0003_add_resources.sql  0004_add_slug.sql  0004_part1_rename.sql  0004_part2_columns.sql  0004_part3_metadata.sql  0004_universal_entities.sql  0005_entities_history.sql  0011_add_performance_indexes.sql  0011_rollback.sql  0011_verify.sql  0011_verify.sql.bak  0012_add_github_fields.sql  0012_rollback.sql  0012_verify.sql  0013_add_arxiv_fields.sql  0013_rollback.sql.bak  0013_verify.sql.bak  0016_add_fts5_search.sql.bak  0016_rollback.sql.bak  0016_verify.sql.bak  0017_add_pwc_fields.sql  0017_rollback.sql.bak  0018_create_knowledge_graph.sql  0018_rollback.sql.bak  0019_add_content_fields.sql  0019_add_content_fields.sql.applied  0020_schema_v3_1.sql  0021_schema_v3_2.sql  0021_schema_v4.3.1.sql  0021_schema_v4.3.1_safe.sql  0022_body_content_url.sql  0022_schema_v4.3.2.sql  0024_entity_relations.sql  0024_umid_resolver.sql  0026_add_fni_fields.sql  0027_add_runtime_fields.sql  0028_add_workflow_logs.sql  (+15 more)
playwright-report/: index.html
public/: _headers  _redirects  _routes.json  ads.txt  debug.css  f2ai_indexnow_verify_key.txt  llms.txt  models.json  openapi.json  robots.txt  sitemap.xsl  tailwind-output.css  verified-tailwind.css
rust/: .gitignore  Cargo.toml
rust/content-extractor/: Cargo.toml  package.json
rust/content-extractor/src/: lib.rs  tests.rs
rust/fni-calc/: Cargo.toml  package.json
rust/fni-calc/src/: lib.rs
rust/identity-cluster/: Cargo.toml  package.json
rust/identity-cluster/src/: canary.rs  diskio.rs  labelprop.rs  lib.rs  partition.rs  reader.rs  tests.rs
rust/ivf-pq/: Cargo.toml  package.json
rust/ivf-pq/src/: adc.rs  cosine.rs  kmeans.rs  lib.rs  pq.rs  rng.rs
rust/markdown-renderer/: Cargo.toml  package.json
rust/markdown-renderer/src/: lib.rs
rust/mesh-engine/: Cargo.toml  package.json
rust/mesh-engine/src/: lib.rs
rust/nxvf-core/: Cargo.toml
rust/nxvf-core/src/: lib.rs  parse_report.rs
rust/nxvf-core/tests/: parse_attrition.rs
rust/r2-engine/: Cargo.toml  package.json
rust/r2-engine/src/: backup.rs  batch.rs  client.rs  lib.rs  multipart.rs  operations.rs  purge.rs  types.rs
rust/satellite-tasks/: Cargo.toml  package.json
rust/satellite-tasks/src/: alt_linker.rs  evidence.rs  knowledge_linker.rs  lib.rs  mesh_graph.rs  relations.rs  search_indexer.rs
rust/shard-router/: Cargo.toml  package.json
rust/shard-router/src/: lib.rs
rust/stream-aggregator/: Cargo.toml  package.json
rust/stream-aggregator/src/: fusion.rs  lib.rs  nxvf.rs  percentile.rs  project.rs
scripts/: Layout.astro  [modelId].js  audit-seo.cjs  auto-populate-benchmark-resolver.js  benchmark-umid-normalizer.js  build-graph.js  build-knowledge-index.mjs  calculate-fni.js  calculate-related.js  ces-check.cjs  ces_check_v16_8_4.py  check-c4-anti-arbitration.mjs  check-graph-llama.js  check-identity-logic.ts  check-links.cjs  check-links.js  check-raw-bytes.js  check-release-gate.js  check-telemetry-no-read.mjs  check-trending-paths.js  check_compliance.py  check_db_metadata.js  clean-db-images.js  cleanup-images-cli.js  debug-check.js  debug-live-urls.js  debug-loader-logic.js  debug-loader-repro.js  debug-r2-paths.js  enrich-arxiv.js  enrich-content.js  enrich-github-enhanced.js  enrich-github.js  enrich-pwc.js  enrich-runtime.js  fetch-aws-datasets.js  fetch-data-v3.js  fetch-data.js  fetch-metadata.js  fetch-pwc.js  (+69 more)
src/: config.ts  env.d.ts  middleware.ts  types.ts
temp-artifacts-500kb/: raw.json  update_urls.sql
tools/rust-img-optimizer/: Cargo.toml
tools/rust-img-optimizer/src/: main.rs
(+1317 files in other folders)
