[workspace]
resolver = "2"
members = [
    "nxvf-core",
    "shard-router",
    "fni-calc",
    "mesh-engine",
    "content-extractor",
    "stream-aggregator",
    "satellite-tasks",
    "r2-engine",
]

[workspace.dependencies]
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[profile.release]
strip = true
lto = true
