[package]
name = "fni-calc-rust"
version = "1.0.0"
edition = "2021"
description = "V18.9 FNI Singularity batch scoring engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
