[package]
name = "identity-cluster-rust"
version = "1.0.0"
edition = "2021"
description = "PR-C2 L3 identity clusters: streaming connected-components over PR-C1 SAME_AS assertions via Option B (hash-partition label-propagation, disk message-passing). Bake/producer-side only — no serve."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

[build-dependencies]
napi-build = "2"
