[package]
name = "nxvf-core"
version = "1.0.0"
edition = "2021"
description = "Shared NXVF V4.1 shard reader — binary (AES-CTR + Zstd) and JSON.gz format support"

[lib]
# Pure Rust lib — no cdylib, no N-API. Used as dependency by other crates.

[dependencies]
serde_json = "1"
flate2 = "1"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
