[package]
name = "satellite-tasks-rust"
version = "1.0.0"
edition = "2021"
description = "V25.8.3 Satellite task engines: search indexing, relations, mesh graph, alt-linker, knowledge-linker"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[build-dependencies]
napi-build = "2"
