[package]
name = "stream-aggregator-rust"
version = "1.0.0"
edition = "2021"
description = "V25.8.3 Streaming shard aggregator with global FNI percentile ranking"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"

[build-dependencies]
napi-build = "2"
