[package]
name = "stream-aggregator-rust"
version = "1.0.0"
edition = "2021"
description = "V25.8.3 Streaming shard aggregator with global FNI percentile ranking"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
nxvf-core = { path = "../nxvf-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
hmac = "0.12"
sha2 = "0.10"

[build-dependencies]
napi-build = "2"
