[package]
name = "rust-img-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.115"
reqwest = { version = "0.12", default-features = false, features = ["stream", "native-tls"] }
futures = "0.3"
urlencoding = "2.1"